# ChangeLog for dev-ruby/http
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/http/ChangeLog,v 1.6 2014/08/05 16:00:49 mrueg Exp $

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> http-0.5.0.ebuild:
  Remove trailing '.' from DESCRIPTION.

  16 May 2014; Hans de Graaff <graaff@gentoo.org> http-0.6.1.ebuild:
  Move to a slot that dependencies expect.

  16 May 2014; Hans de Graaff <graaff@gentoo.org> -http-0.6.0.ebuild:
  Cleanup.

*http-0.6.1 (14 May 2014)

  14 May 2014; Manuel Rüger <mrueg@gentoo.org> +http-0.6.1.ebuild:
  Version bump.

*http-0.6.0 (22 Apr 2014)

  22 Apr 2014; Hans de Graaff <graaff@gentoo.org> +http-0.6.0.ebuild:
  Version bump. Add missing http_parser_rb dependency.

*http-0.5.0 (21 Feb 2014)

  21 Feb 2014; Hans de Graaff <graaff@gentoo.org> +http-0.5.0.ebuild,
  +metadata.xml:
  Initial import. New dependency for dev-ruby/twitter.