@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST http-0.5.0.gem 20992 SHA256 0d45a571564a5fa79600095e29535976903a1d65628d4e41b2f344a07b0781ef SHA512 aca100010ed0629636f49ddddf9617f014a6eba6628c8be9ccb281653a8e7932c6c5509746df2ee039f42d4526944f68a33767017d11ee6397dd935cd9b4d9d6 WHIRLPOOL 856345f78226f3fd51d888a97e589b27d5b1e5ee7d2510ac5ba728b8a19e36f4bb5169b5c8c59b5c4a5750e7c8d745554fc4525a4b567256254cb5828bd6b080
 DIST http-0.6.1.gem 66048 SHA256 6c1c88b7abe75f6e4da320882761e1b310ab622f410897ba6b845d647d799b16 SHA512 2ac8e48f799a30c6c74d76dfb3d31eea1d5f759a02c274fe360fa2bab484b52e44cb2e4e8487754d4c002517b1ad75a904b9c9c8a486811936e9abdd33541d5e WHIRLPOOL f07edf1f1b4e152b301177c644b89fcfbb1ce716af213d1ae3515df1d679b5388dea4a52741db1f7cc2bc6f4106eaaf4a64a77ae939a821f7238e27f966417a2
+DIST http-0.6.2.gem 66560 SHA256 68440433b427669527490236fadce5095be59a4960e53173dc59e5ae3f1901c4 SHA512 87075afb9afdc3c658fac11f5fd188594fb7724974a5361c7db5e0360ee29cdde725f7b53a6737c60ff1cb0799513118576a6c37345a642f67761410ac0ff868 WHIRLPOOL c3aeed716836cae66651cc5fde1d31c803de2f1c0804928d7e5201927f8178440d2be5e6061da3272920e36d1ee7458bd8a088d74d54eba3d65f15f595dfc2f2
 EBUILD http-0.5.0.ebuild 630 SHA256 e031c6c85295bd46fdf74fa412ac65980a409e2979234e1de63130f1cd7168a0 SHA512 60f176e9ade22cc2bd222a6169b755dc7d33e458b242c9ec2d5f346942eaf19bbbef70e4e7281964314476f1abdfc24cac31dda0b543378c90cb66e7030a90b2 WHIRLPOOL f1650e5e8bfa1d2b4c6fdf707dcfe9454d7c9fb2d6aef0606342ea68ac6f830cb0696f855282a12d3613ed9fcc1dc188688d07f762abf5f58408a658294e72a0
 EBUILD http-0.6.1.ebuild 753 SHA256 99f41cb80208507d581e04f292ec64382d1203571df5f0d5a8634596c81496f5 SHA512 4ecabd88935b9178bb75f9a16536f50d8f42ec87984c5c62a674a3e6bc5da0e9559c835a3f77306582b1d8a88f17f1ae2ed2cc5616178bd5ce537676d04ccec6 WHIRLPOOL c708968bf29c5b2887d177429b815ca22a2ec2879aea9f15bd41b0db289ac9bedc01667bd0df3cc08e3e4a964d6409d20b3cf5c477da5ec278128b2c7ea48d5c
-MISC ChangeLog 935 SHA256 9da8b626ab7b6fa02d9baea2ce221d4a43e07eaecf24406e283ddb60efd79f75 SHA512 ee26a1abb36883622eae0953d2dea5f3d39debd2aab4395075ba19554f19600493840809b9c1fefe6db53c95907d8e2a3fe32582c454d0356a63cd6dbec74fbf WHIRLPOOL cab2257cafa99e8cf9595ee97dcd5be15bcb97ac1d03130bea457fdc4ae62ce821f32895afaa3f651198e7191da106415e4d973e2423baff74198a9f3fde89df
+EBUILD http-0.6.2.ebuild 753 SHA256 32f36ab4582712e26472d755bfb52ae483f4499044ea60b1363bb7ebfe8a266a SHA512 afee525387754d191d6b58bede2ffafe21f16774a435702c2f8e3c25c7443c060ce5b511a896f1b816ea085e975e4e0d4f00d3ec1b23d9b4c986dea083222634 WHIRLPOOL aa3ba597a883b17c88250cfd35943d5c562b9e754b32c5dacbdaba4998062e482b40a0f4d8d1e2405f7d3e19ba3576f7987ef90dc7648453756ef9d225063bcf
+MISC ChangeLog 1050 SHA256 e629d585dcd533c818ad580ab9433f531795f672a1a31d39d24eb9274acbe276 SHA512 483d77a003492559539e35b1f68ced4c03de5e8534a87332239313c7dd4d3ea9b427b788ec0063a183946122383c3b4ed967243fde4f511a270f33f60b143f78 WHIRLPOOL fd7b87b73eedad14bc946a91013d125873a376adae4d17fe870b8d0e260008451a9f50a0702bc66967c710a8c8844db8d4806bf568df1ce6e3f62a6c44eb9eb6
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlPkbVcACgkQiIP6VqMIqNel/QD+J/3EIZaVCCXsgs7bmpelhY7+
+xCv/dLeZoxvuLLHaPSwA/31Vo5Bhswr1zCHETkdwLgyom5kO1cyro3I4CMp7xLZd
+=Fl40
+-----END PGP SIGNATURE-----
